--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    position: relative;
 }
 .fa{
     display:flex;
@@ -10,7 +11,7 @@ html {
     right:40px;
     height:50px;
     width:50px;
-    background:rgb(0, 225, 120);
+    background:rgb(42, 138, 93);
     border-radius:50%;
     color:#fff;
     box-shadow:0px 0px 10px rgba(0,0,0,.5);
