--- a/index.css
+++ b/index.css
@@ -28,6 +28,10 @@ html {
     opacity:1;
     bottom:40px;
 }
+.nav-link:hover{
+    color: #fff;
+    text-decoration: underline;
+}
 .sec2 {
     position: relative;
     min-height: 100vh;
@@ -152,7 +156,6 @@ html {
 .sec2__aboutme1Social ul li:nth-child(2) a:hover {
     color: rgb(214, 211, 49);
 }
-
 .sec2__aboutme1Social ul li:nth-child(3) a:hover {
     color: rgb(255, 0, 0);
 }
@@ -162,8 +165,6 @@ html {
 .sec2__aboutme1Social ul li:nth-child(5) a:hover {
     color: rgb(0, 0, 255);
 }
-
-
 .sec2__aboutme2 {
     position: relative;
     flex: .5;
@@ -171,11 +172,9 @@ html {
     justify-content: center;
     align-items: center;
 }
-
 .sec2__aboutme2 p {
     font-size: 1.5rem;
 }
-
 .sec4 {
     overflow: hidden;
     position: relative;
@@ -185,7 +184,6 @@ html {
     align-items: center;
     justify-content: center;
 }
-
 .sec4__container {
     position: relative;
     width: 100%;
@@ -195,7 +193,6 @@ html {
     padding: 2rem;
     flex-wrap: wrap;
 }
-
 .sec4__box1 {
     display: flex;
     justify-content: space-evenly;
@@ -203,38 +200,29 @@ html {
     flex-direction: column;
     flex: .5;
 }
-
 .sec4__content1 {
     margin-bottom: 1rem;
 }
-
 .sec4__content1 h3 {
     border-bottom: .2rem solid #00ff90;
     width: fit-content;
     padding-bottom: .5rem;
     margin-bottom: .5rem;
 }
-
-
 .sec4__content1 h3 span {
     color: #00ff90;
 }
-
-
 .sec4__content2Icon {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .sec4__content2Icon h2 {
     margin-left: .5rem;
 }
-
 .sec4__content2 {
     margin: .5rem 0;
 }
-
 .sec4__content3 ul {
     display: flex;
     justify-content: space-evenly;
@@ -242,11 +230,9 @@ html {
     list-style-type: none;
     margin-top: 1rem;
 }
-
 .sec4__content3 ul li {
     margin: 0 1.5rem 0 0;
 }
-
 .sec4__content3 ul li a {
     font-size: 2rem;
     border: .2rem solid #050505;
@@ -255,18 +241,12 @@ html {
     transition: .3s;
     color: #1e5f43;
 }
-
-/*.sec4__content3 ul li a:hover {
-    color: rgba(255, 255, 255, .5);
-}*/
 .sec4__content3 ul li:hover {
     transform: translateY(-.3rem);
 }
-
 .sec4__content3 ul li:nth-child(1) a:hover {
     color: rgb(235, 108, 108);
 }
-
 .sec4__content3 ul li:nth-child(2) a:hover {
     color: rgb(214, 211, 49);
 }
@@ -293,7 +273,6 @@ html {
 .sec4__content1 h3 span{
     color:  #1e5f43;;
 }
-
 .sec4__links ul {
     display: flex;
     justify-content: center;
@@ -301,23 +280,19 @@ html {
     flex-direction: column;
     list-style-type: none;
 }
-
 .sec4__links ul li {
     margin: .5rem 0;
 }
-
 .sec4__links ul li a {
     transition: .3s;
     text-decoration: none;
     font-size: 1.5rem;
     text-align: center;
 }
-
 .sec4__links ul li a:hover {
     color: #fff;
     border-bottom:1px solid #1b5c40;
 }
-
 .sec4__box3 h3 {
     border-bottom: .2rem solid  #1e5f43;
     padding-bottom: .5rem;
@@ -330,26 +305,40 @@ html {
     justify-content: space-evenly;
     align-items: center;
 }
- .sec3 h2 {
+ .Skills h2 {
         font-size: 5rem;
 }
-.sec1__imgBx img {
-    position: relative;
-    align-items: center;
-    z-index: 1;
-    height: 30%;
-    width: 50%;
-    border-radius: 40px;
-    object-fit: cover;
-    filter: drop-shadow(0 0 .5rem rgba(0, 0, 0, .5));
-    margin-right: none;
+.hover:hover{
+    border:1px solid #2b805b;
+    background-color: #333;
 }
-.sec1__imgContainer {
-    position: relative;
+.footer_icons ul {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    list-style-type: none;
+    margin-top: 1rem;
 }
 
-.sec1__imgBx {
-    position: relative;
-    width: 50rem;
-    /* background: red; */
+.footer_icons ul li {
+    margin: 0 1.5rem 0 0;
+}
+
+.footer_icons ul li a {
+    font-size: 1rem;
+    transition: .3s;
+    color: #fff;
+}
+.footer_icons ul li:nth-child(1) a:hover {
+    color: rgb(83, 181, 226);
+}
+
+.footer_icons ul li:nth-child(2) a:hover {
+    color: rgb(95, 189, 95)
+}
+.footer_icons ul li:nth-child(3) a:hover {
+    color: rgb(53, 53, 59);
+}
+.footer_icons ul li:nth-child(4) a:hover {
+    color: rgb(0, 0, 255);
 }
