--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ html {
     background-repeat:no-repeat;
     visibility:hidden;
     opacity:0;
-    /*cursor:pointer;*/
+    cursor:pointer;
     transition:.3s;
     z-index:10000;
 }
@@ -32,7 +32,7 @@ html {
     color: #fff;
     text-decoration: underline;
 }
-.sec2 {
+.about {
     position: relative;
     min-height: 100vh;
     width: 100%;
@@ -44,27 +44,17 @@ html {
     border-bottom: .2rem solid rgb(218, 218, 218);
 }
 
-.sec2__heading {
+.about_heading {
     overflow: hidden;
 }
 
-.sec2__heading h2 {
+.about_heading h2 {
     position: relative;
     font-size: 5rem;
     color: #333;
     text-transform: capitalize;
 }
-.sec2__heading h2:before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    height: .2rem;
-    width: 100%;
-    background-color: #00ff90;
-}
-
-.sec2__container {
+.about_container {
     position: relative;
     display: flex;
     justify-content: space-evenly;
@@ -73,18 +63,16 @@ html {
     flex-wrap: wrap;
     padding: 0 5rem;
 }
-.sec2__aboutme1 {
+.about_aboutme1 {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     flex: .5;
 }
-.sec2__aboutme1Img {
+.about_aboutme1Img {
     position: relative;
     width: 10rem;
-    overflow: hidden;
-    border: .3rem solid #00ff90;
     padding: .3rem;
     border-radius: 50%;
     display: flex;
@@ -92,95 +80,86 @@ html {
     align-items: center;
     transition: .3s;
 }
-.sec2__aboutme1Img:hover {
+.about_aboutme1Img:hover {
     transform: scale(1.1);
 }
-.sec2__aboutme1Img img {
+.about_aboutme1Img img {
     width: 100%;
     object-fit: cover;
     background-image: url(Images/Muallim.png) ;
     border-radius: 50%;
 }
-.sec2__aboutme1 h2 {
+.about_aboutme1 h2 {
     position: relative;
     font-size: 2rem;
     color: #333;
     padding-bottom: 1rem;
 
 }
-.sec2__aboutme1 h2:before {
+.about_aboutme1 h2:before {
     position: absolute;
     height: .2rem;
     width: 60%;
     bottom: 0;
     right: 25%;
-    content: "";
     background: #ccc;
 }
-.sec2__aboutme1Social ul {
+.about_aboutme1Social ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 1rem;
     list-style-type: none;
 }
-.sec2__aboutme1Social ul li {
+.about_aboutme1Social ul li {
     margin: 0 2rem;
     transition: .3s;
 }
-.sec2__aboutme1Social ul li a {
+.about_aboutme1Social ul li a {
     text-decoration: none;
     color: #333;
     font-size: 3rem;
     transition: .3s;
 }
-.sec2__aboutme1Social ul li:hover {
+.about_aboutme1Social ul li:hover {
     transform: translateY(-.3rem);
 }
 
-.sec2__aboutme1Social ul li:nth-child(1) a:hover {
+.about_aboutme1Social ul li:nth-child(1) a:hover {
     color: rgb(235, 108, 108);
 }
 
-.sec2__aboutme1Social ul li:nth-child(2) a:hover {
+.about_aboutme1Social ul li:nth-child(2) a:hover {
     color: rgb(214, 211, 49);
 }
-.sec2__aboutme1Social ul li:nth-child(3) a:hover {
+.about_aboutme1Social ul li:nth-child(3) a:hover {
     color: rgb(255, 0, 0);
 }
-.sec2__aboutme1Social ul li:nth-child(4) a:hover {
+.about_aboutme1Social ul li:nth-child(4) a:hover {
     color: rgb(58, 58, 109);
 }
-.sec2__aboutme1Social ul li:nth-child(5) a:hover {
+.about_aboutme1Social ul li:nth-child(5) a:hover {
     color: rgb(0, 0, 255);
 }
-.sec2__aboutme2 {
+.about_aboutme2 {
     position: relative;
     flex: .5;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.sec2__aboutme2 p {
+.about_aboutme2 p {
     font-size: 1.5rem;
 }
-.sec4 {
-    overflow: hidden;
-    position: relative;
-    min-height: 70vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .sec4__container {
-    position: relative;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-start;
-    padding: 2rem;
-    flex-wrap: wrap;
+    align-items: center;
+    padding-bottom: 2rem;
+    padding-left: 1.5rem;
+    padding-top: 1.5rem;
+    padding-right: 1.5rem;
 }
 .sec4__box1 {
     display: flex;
@@ -262,44 +241,13 @@ html {
 .sec4__content1 h3 span{
     color:  #1e5f43;;
 }
-.sec4__links ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    list-style-type: none;
-}
-.sec4__links ul li {
-    margin: .5rem 0;
-}
-.sec4__links ul li a {
-    transition: .3s;
-    text-decoration: none;
-    font-size: 1.5rem;
-    text-align: center;
-}
-.sec4__links ul li a:hover {
-    color: #fff;
-    border-bottom:1px solid #1b5c40;
-}
-.sec4__box3 h3 {
-    border-bottom: .2rem solid  #1e5f43;
-    padding-bottom: .5rem;
-    margin-bottom: .5rem;
-    width: fit-content;
-}
-.sec4__box3 form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
  .Skills h2 {
         font-size: 5rem;
 }
 .hover:hover{
-    border:1px solid #2b805b;
-    background-color: #333;
+    border:2px solid #2b805b;
+    background-color: #746f6f;
+    color:#fff;
 }
 .footer_icons ul {
     display: flex;
